# elements

./: .cursor-workspace.json  .env.core.example  .env.enterprise.example  .env.example  .env.production.example  .gitignore  .gitignore.production  ARCHITECTURE.md  ARCHITECTURE.md.backup  CHECK_BEFORE_DEPLOY.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_HUB_SETUP.md  QUICK_DEPLOY.md  README.md  README_DEPLOY.txt  STATIC_ANALYSIS_REPORT.md  TESTING_CHECKLIST.md  backup.sh  clear-cursor-cache-auto.sh  clear-cursor-cache.sh  deploy.sh  docker-compose.core.yml  docker-compose.enterprise.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fix-docker-rate-limit.sh  РЕШЕНИЕ_ОШИБКИ_RATE_LIMIT.txt
HR_desk/: docker-compose.yml
backend/: Dockerfile  Dockerfile.core  Dockerfile.enterprise  __init__.py  main.py  requirements.core.txt  requirements.enterprise.txt  requirements.txt
frontend/: .dockerignore  Dockerfile.core  Dockerfile.enterprise  Dockerfile.prod  index.html  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
license-server/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
nginx/: nginx.conf
scripts/: README.md  build-core.sh  (+8 more)
shared/python/: pyproject.toml
shared/python/elements_common/: __init__.py
shared/python/elements_common/auth/: __init__.py  jwt.py  middleware.py  rbac.py
shared/python/elements_common/discovery/: __init__.py  registry.py
shared/python/elements_common/events/: __init__.py  bus.py  schemas.py
shared/python/elements_common/schemas/: __init__.py  user.py
(+492 files in other folders)
